erDiagram
    %% ========= CATÁLOGOS =========
    C_ROLE {
        uuid c_role_id PK
        string c_role_type "admin|receptionist|manager"
    }

    C_PERMISSION {
        uuid c_permission_id PK
        string c_permission_name
    }

    C_ROLE_PERMISSION {
        uuid c_role_id FK
        uuid c_permission_id FK
    }

    %% ========= USUARIOS (STAFF) =========
    T_STAFF {
        uuid t_staff_id PK
        string t_staff_name
        string t_staff_last_name
        string t_staff_email
        string t_staff_phone
        string t_staff_password
        uuid c_role_id FK
        boolean t_staff_status
        timestamp t_staff_created_at
        timestamp t_staff_updated_at
    }

    T_STAFF_LOGIN_HISTORY {
        uuid t_login_id PK
        uuid t_staff_id FK
        timestamp t_login_time
        string t_login_ip
        boolean t_login_success
    }

    %% ========= RELACIONES =========
    C_ROLE ||--o{ T_STAFF : "has"
    C_PERMISSION ||--o{ C_ROLE_PERMISSION : ""
    C_ROLE ||--o{ C_ROLE_PERMISSION : ""
    T_STAFF ||--o{ T_STAFF_LOGIN_HISTORY : "has"